--- a/package.json
+++ b/package.json
@@ -1,5 +1,25 @@
 {
   "dependencies": {
-    "bootstrap": "^5.1.3"
-  }
+    "ejs": "^3.1.6",
+    "express": "^4.17.3",
+    "morgan": "^1.10.0",
+    "nodemon": "^2.0.15"
+  },
+  "name": "ejemplosp5js",
+  "description": "Ejemplos con P5js",
+  "version": "1.0.0",
+  "main": "./src/index.js",
+  "scripts": {
+    "dev": "nodemon src/index.js"
+  },
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/matahj/ejemplosP5js.git"
+  },
+  "author": "Jorge MataH",
+  "license": "ISC",
+  "bugs": {
+    "url": "https://github.com/matahj/ejemplosP5js/issues"
+  },
+  "homepage": "https://github.com/matahj/ejemplosP5js#readme"
 }
