--- a/package.json
+++ b/package.json
@@ -10,7 +10,8 @@
   "version": "1.0.0",
   "main": "./src/index.js",
   "scripts": {
-    "dev": "nodemon src/index.js"
+    "dev": "nodemon src/index.js",
+    "start": "node src/index.js"
   },
   "repository": {
     "type": "git",
